Fixed right padding issue on small screen in about section

--- a/css/style.css
+++ b/css/style.css
@@ -114,10 +114,12 @@ ul li a {
 .prompt {
 	color: #F2F2F2;
 	padding-left: 20px;
+	padding-right: 20px;
 }
 .response {
 	color: #AAAAAA;
 	padding-left: 35px;
+	padding-right: 20px;
 }
 .response a {
 	color: #00ABD7;
